# mrs_uav_gazebo_simulation

./: .gitignore  .gitman.yml  README.md  tmux
ros_packages/: .gitman.yml  mavlink_sitl_gazebo  mrs_gazebo_common_resources  px4_firmware  (+1 more)
ros_packages/mrs_uav_gazebo_simulation/: CMakeLists.txt  mrs_drone_spawner  package.xml  test_launch.sh
ros_packages/mrs_uav_gazebo_simulation/ROMFS/px4fmu_common/init.d/: rc.mc_defaults
ros_packages/mrs_uav_gazebo_simulation/ROMFS/px4fmu_common/init.d-posix/: px4-rc.mavlink  px4-rc.mavlink_gcs  px4-rc.params  rcS
ros_packages/mrs_uav_gazebo_simulation/ROMFS/px4fmu_common/init.d-posix/airframes/: 11001_brus  12001_big_dofec  12001_naki  4001_a300  4001_m690  4001_robofly  4001_t650  4001_x500  4011_f450  6010_f550  8002_eaglemk2
ros_packages/mrs_uav_gazebo_simulation/ROMFS/px4fmu_common/mixers/: octo_cox_w.main.mix  octo_x_reversed.main.mix
ros_packages/mrs_uav_gazebo_simulation/config/: debug_verbosity.yaml  pixhawk_only_takeoff.yaml  qorvo_dw1000_mount.stl  spawner_custom_config.yaml  spawner_params.yaml
ros_packages/mrs_uav_gazebo_simulation/config/mrs_uav_system/: f330.yaml  f450.yaml  f550.yaml  m690.yaml  naki.yaml  robofly.yaml  t650.yaml  x500.yaml
ros_packages/mrs_uav_gazebo_simulation/launch/: dangerous_pixhawk_only_takeoff.launch  gzclient.launch  mrs_drone_spawner.launch  mrs_drone_spawner.launch.py  run_simulation_firmware.launch  run_simulation_mavros.launch  simulation.launch  spawn_simulation_model.launch
ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/: model.config
ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/materials/: mrs.material
ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/meshes/custom/naki/: NAKI_gimbal_movable_part.dae  NAKI_legless_frame.dae  NAKI_legs.dae  NAKI_propeller.dae  NAKI_sony_alpha_6500_w_gimbal_mount.dae  dji_f450_rotor.dae
ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/meshes/dji/f330/: f330_arm.dae  f330_battery_holder.dae  f330_bluefox_holder.dae  f330_bottom_board.dae  f330_compton_holder.dae  f330_leg_110mm.dae  f330_nuc.dae  f330_prop.dae  f330_rotor.dae  f330_top_board.dae
ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/meshes/holybro/: holybro_x500_rplidar_mount.dae  holybro_x500_top_board.dae
ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/meshes/robofly/: body.dae  prop_ccw.dae  prop_cw.dae
ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/meshes/sensors/: basler_dart.stl  livox_mid360.dae  mobius.dae  realsense_body.stl  realsense_glass.stl  rplidar.stl  siyi_ZT6_camera.stl  siyi_ZT6_gimbal.stl  sony_alpha_6500.dae  teraranger_evo.stl  teraranger_evo_thermal_33.dae  ultrasonic_URM37.dae  whycon_box.dae
ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/meshes/x500v2/: arm_3d_print_mesh_file.stl  arm_carbon_mesh_file.dae  arm_carbon_mesh_file.stl  arm_plastic1_mesh_file.stl  arm_plastic2_mesh_file.stl  battery_mesh_file.stl  battery_mount_mesh_file.stl  bluefox_mount_mesh_file.stl  bottom_board_mesh_file.dae  garmin_mount_mesh_file.stl  gps_module_mesh_file.stl  gps_mount_mesh_file.stl  leg_3d_print_mesh_file.stl  lidar_mount_mesh_file.stl  motor_bottom_mesh_file.stl  motor_middle_mesh_file.stl  motor_top_mesh_file.stl  nuc_board_mesh_file.stl  nuc_cooler_mesh_file.stl  nuc_hex_posts_mesh_file.stl  pixhawk6c_mesh_file.stl  prop_mesh_file.dae  realsense_mount_mesh_file.stl  top_board_mesh_file.dae
ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/: .gitignore  component_snippets.sdf.jinja  component_snippets.sdf.jinja.orig  components_base.sdf.jinja  f330.sdf.jinja  f330.sdf.jinja_backup  f450.sdf.jinja  f550.sdf.jinja  generic_components.sdf.jinja  m690.sdf.jinja  naki.sdf.jinja  robofly.sdf.jinja  t650.sdf.jinja  x500.sdf.jinja
ros_packages/mrs_uav_gazebo_simulation/scripts/: dangerous_pixhawk_only_takeoff  dangerous_pixhawk_only_takeoff.py  jinja_gen.py  kill_previous_session.sh  mrs_drone_spawner  mrs_drone_spawner.py  utils.py
ros_packages/mrs_uav_gazebo_simulation/scripts/mrs_drone_spawner/: component_wrapper.py  datatypes.py  jinja_utils.py  mrs_drone_spawner.py  template_wrapper.py  updated_drone_spawner.py
ros_packages/mrs_uav_gazebo_simulation/test/: CMakeLists.txt  all_tests.sh  coverage.sh  single_test.sh
ros_packages/mrs_uav_gazebo_simulation/test/basic/: basic.test  test.cpp
ros_packages/mrs_uav_gazebo_simulation/test/basic/launch/: mrs_uav_system.launch
ros_packages/mrs_uav_gazebo_simulation/test/takeoff/: CMakeLists.txt  takeoff.test
ros_packages/mrs_uav_gazebo_simulation/test/takeoff/takeoff_gps_baro/: takeoff_gps_baro.test  test.cpp
ros_packages/mrs_uav_gazebo_simulation/test/takeoff/takeoff_gps_baro/config/: custom_config.yaml
ros_packages/mrs_uav_gazebo_simulation/test/takeoff/takeoff_gps_garmin/: test.cpp
ros_packages/mrs_uav_gazebo_simulation/test/takeoff/takeoff_gps_garmin/config/: custom_config.yaml
ros_packages/mrs_uav_gazebo_simulation/test/uav_models/: CMakeLists.txt  test.cpp  uav_models.test
ros_packages/mrs_uav_gazebo_simulation/tmux/new_spawner/: session.yml
ros_packages/mrs_uav_gazebo_simulation/tmux/one_drone/: rviz.rviz  session.yml
ros_packages/mrs_uav_gazebo_simulation/tmux/one_drone/config/: custom_config.yaml  network_config.yaml  world_config.yaml
ros_packages/mrs_uav_gazebo_simulation/tmux/one_drone_3dlidar/: session.yml
ros_packages/mrs_uav_gazebo_simulation/tmux/one_drone_3dlidar/config/: custom_config.yaml
ros_packages/mrs_uav_gazebo_simulation/tmux/one_drone_realsense/: session.yml
ros_packages/mrs_uav_gazebo_simulation/tmux/one_drone_uas_challenge/: session.yml
ros_packages/mrs_uav_gazebo_simulation/tmux/one_drone_vio/: layout.json  session.yml
ros_packages/mrs_uav_gazebo_simulation/tmux/three_drones/: session.yml
ros_packages/mrs_uav_gazebo_simulation/tmux/three_drones/config/: network_config.yaml  rviz.rviz  tf_connector.yaml
ros_packages/mrs_uav_gazebo_simulation/tmux/x400/: session.yml
(+63 files in other folders)
