<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  
  <name>mrs_uav_gazebo_simulation</name>
  <version>2.0.0</version>
  <description>The Metapackage for MRS UAV Gazebo simulation pipeline.</description>

  <author email="vojtech.spurny@fel.cvut.cz">Vojtech Spurny</author>
  <maintainer email="petr.stibinger@fel.cvut.cz">Petr Stibinger</maintainer>
  <maintainer email="vojtech.spurny@fel.cvut.cz">Vojtech Spurny</maintainer>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>python3-jinja2</depend>
  <depend>ros_gz</depend>
  <depend>ros_gz_sim</depend>
  <depend>px4</depend>
  <depend>mavros</depend>
  <depend>mrs_gazebo_common_resources</depend>
  <depend>std_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_uav_px4_api</depend>
 <!-- TODO: stibipet@fel.cvut.cz -->
  <!-- <depend>mrs_uav_testing</depend> -->
  <!-- <depend>mrs_uav_gazebo_testing</depend> --> 
 <!-- TODO -->


  <export>
    <build_type>ament_cmake</build_type>
    <!-- ros_gz_sim automatically registers these exports when running the simulation from the ros_gz_sim launch file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>

</package>
